# ailang

./: .gitignore  Cargo.toml  LLM_GUIDE.md  MANIFESTO.md  README.md  SPEC.md  TODO.md
.github/workflows/: ci.yml
editors/vscode/ailang/: language-configuration.json  package.json
editors/vscode/ailang/syntaxes/: ailang.tmLanguage.json
examples/: 01_two_sum.ai  02_fizzbuzz.ai  03_palindrome_number.ai  04_reverse_integer.ai  05_fibonacci.ai  06_max_subarray.ai  07_valid_parentheses.ai  08_merge_sorted_lists.ai  09_climbing_stairs.ai  10_contains_duplicate.ai  11_invert_binary_tree.ai  12_builtins_demo.ai  13_cond_demo.ai  14_file_io_demo.ai  15_pipeline_demo.ai  16_error_handling_demo.ai  17_modules_demo.ai  18_json_demo.ai  19_http_demo.ai  20_ffi_demo.ai  21_distinct_subseq.ai  22_tetris.ai  any_warn_demo.ai  connect4.ai  hello.ai  math_helpers.ai  test_module_not_found.ai  test_private_import.ai  verbose_demo.ai
src/: ast.rs  ffi.rs  formatter.rs  interpreter.rs  json.rs  lexer.rs  main.rs  parser.rs  token.rs  warnings.rs
std/: list.ai  math.ai
tests/: integration.rs
tests/ffi_test_lib/: Cargo.toml
tests/ffi_test_lib/src/: lib.rs
