[package]
name = "ailang"
version = "0.7.0"
edition = "2024"
description = "A programming language designed for AI agents"
license = "MIT"
repository = "https://github.com/gmullerms/ailang"
authors = ["gmullerms"]
keywords = ["programming-language", "ai", "agents", "interpreter"]
categories = ["compilers", "command-line-utilities"]

[dependencies]
ureq = { version = "3", default-features = false }
libloading = "0.8"
goblin = "0.10"
